[WIP]: Migrating to JDA